[i18n] catalan little fixes
(Old svn revision: 20485)

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-18 18:17+0900\n"
-"PO-Revision-Date: 2006-03-18 18:40+0100\n"
+"PO-Revision-Date: 2006-03-18 20:21+0100\n"
 "Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -70,7 +70,7 @@ msgstr "Afegix un element nou"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:656
 msgid "Customize Panel"
-msgstr "Personalitza Plafó"
+msgstr "Personalitza quadre"
 
 #: ../panel/panel.c:667 ../panel/panel-dialogs.c:602
 msgid "Add Items"
@@ -367,7 +367,7 @@ msgstr "No s'ha pogut executar \"%s\""
 #: ../plugins/launcher/launcher.c:435
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "S'ha produit un error a l'ordre \"%s\""
 
 #: ../plugins/launcher/launcher.c:682 ../plugins/launcher/launcher.c:1271
 #: ../plugins/launcher/launcher-dialog.c:1142
@@ -479,7 +479,7 @@ msgid ""
 "The Zero Install GUI has finished, but the launcher dialog has disappeared "
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
-msgstr ""
+msgstr "L'instal·lador Zero IGU ha acabat però el diàleg ha desaparegut durant el procés. No s'afegirà la llançadora (però cap dels fitxers descarregats s'haurà perdut)."
 
 #: ../plugins/launcher/launcher-dialog.c:1463
 #, c-format
@@ -489,6 +489,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Impossible executar 0lauch:\n"
+"%s\n"
+"\n"
+"Per obtenir ajuda a l'instal·lador Zero, visiteu http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1786
 msgid "Select file"
