Updated Japanese translations.
(Old svn revision: 20490)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-18 18:17+0900\n"
-"PO-Revision-Date: 2006-03-04 21:04+0900\n"
+"PO-Revision-Date: 2006-03-19 10:59+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -478,13 +478,18 @@ msgstr ""
 msgid "Program Launcher"
 msgstr "プログラムのランチャー"
 
+# FIXME: wtf
 #: ../plugins/launcher/launcher-dialog.c:1428
 msgid ""
 "The Zero Install GUI has finished, but the launcher dialog has disappeared "
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"Zero Install の GUI が終了していますが、その間ランチャーダイアログが表示され"
+"ていません。ランチャーを追加しないで下さい (ダウンロードしたファイルが失われ"
+"ることはありません)。"
 
+# FIXME: wtf
 #: ../plugins/launcher/launcher-dialog.c:1463
 #, c-format
 msgid ""
@@ -493,6 +498,11 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"0launch の実行に失敗しました:\n"
+"%s\n"
+"\n"
+"Zero Install に関するヘルプは\n"
+"http://0install.net を御覧下さい"
 
 #: ../plugins/launcher/launcher-dialog.c:1786
 msgid "Select file"
