--- a/po/ru.po
+++ b/po/ru.po
@@ -3,26 +3,28 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Poul Ionkin <wizzard@nmg.lv>, 2003.
 # Anthony Ivanoff <a-i@bk.ru>, 2004, 2005.
+# Andrey Fedoseev <andrey.fedoseev@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-27 23:23+0900\n"
-"PO-Revision-Date: 2006-03-13 22:11+0500\n"
-"Last-Translator: Anthony Ivanoff <a-i@bk.ru>\n"
+"PO-Revision-Date: 2006-03-25 17:12+0500\n"
+"Last-Translator: Andrey Fedoseev <andrey.fedoseev@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
 "10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Элемент был неожиданно удален: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:572
 #, c-format
@@ -40,7 +42,7 @@ msgstr "Панель Xfce"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "Элемент будет удален с панели и его конфигурация будет потеряна."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:748
@@ -55,7 +57,7 @@ msgstr "Свойства"
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:765
 msgid "About"
-msgstr ""
+msgstr "О панели"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
@@ -80,7 +82,7 @@ msgstr "Добавить элементы"
 
 #: ../panel/panel.c:682 ../plugins/actions/actions.c:424
 msgid "Quit"
-msgstr ""
+msgstr "Выйти"
 
 #: ../panel/panel.c:692
 msgid "Restart"
@@ -88,7 +90,7 @@ msgstr "Перезагрузить"
 
 #: ../panel/panel.c:706
 msgid "About the Xfce Panel"
-msgstr ""
+msgstr "О панели Xfce"
 
 #: ../panel/panel-item-manager.c:363 ../panel/panel-item-manager.c:371
 #, c-format
@@ -97,11 +99,12 @@ msgstr "Не удалось открыть модуль \"%s\""
 
 #: ../panel/panel-app.c:241 ../panel/panel-app.c:736
 msgid "Exit Xfce Panel?"
-msgstr ""
+msgstr "Завершить работу панели Xfce?"
 
 #: ../panel/panel-app.c:737
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr ""
+"Вы не можете удалить последнюю панель. Вы хотите завершить работы программы?"
 
 #: ../panel/panel-app.c:764
 #, c-format
@@ -114,10 +117,10 @@ msgstr "Выбранная панель и все ее элементы буду
 
 #: ../panel/panel-app.c:807
 msgid "Developer"
-msgstr ""
+msgstr "Разработчик"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -129,13 +132,12 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Панель Xfce\n"
-" Версия %s\n"
+" Панель Xfce %s\n"
 "\n"
 " Часть рабочей среды Xfce\n"
 " http://www.xfce.org\n"
 "\n"
-" Распространяется на условиях GNU GPL.\n"
+" Распространяется на условиях лицензии GNU GPL.\n"
 "\n"
 
 #: ../panel/main.c:52
@@ -149,7 +151,6 @@ msgstr ""
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
-#, fuzzy
 msgid ""
 " OPTIONS\n"
 " -h, --help      Show this message and exit\n"
@@ -168,9 +169,9 @@ msgstr ""
 " -c, --customize Показать диалог настроек\n"
 " -s, --save      Сохранить конфигурацию\n"
 " -r, --restart   Перезапустить панели\n"
-" -q, --quit      Закончиить сессию\n"
+" -q, --quit      Закончить сессию\n"
 " -x, --exit      Закрыть все панели и завершить программу\n"
-" -a, --add       Add new items\n"
+" -a, --add       Добавить новые элементы\n"
 "\n"
 
 #: ../panel/panel-dialogs.c:617
@@ -194,9 +195,8 @@ msgid "Full Width"
 msgstr "Полная ширина"
 
 #: ../panel/panel-dialogs.c:851 ../panel/panel-dialogs.c:1075
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Редактор"
+msgstr ""
 
 #: ../panel/panel-dialogs.c:911 ../panel/panel-dialogs.c:1140
 msgid "Left"
@@ -228,7 +228,6 @@ msgid "Freely Moveable"
 msgstr "Свободно перемещаемая"
 
 #: ../panel/panel-dialogs.c:1083
-#, fuzzy
 msgid "Auto_hide"
 msgstr "Автоматически скрывать:"
 
@@ -250,7 +249,7 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:1136
 msgid "At both sides"
-msgstr ""
+msgstr "По обеим сторонам"
 
 #: ../panel/panel-dialogs.c:1217
 msgid "Select Monitor"
@@ -271,7 +270,7 @@ msgstr "Прозрачность (%)"
 
 #: ../panel/panel-dialogs.c:1393
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Сделать активную панель непрозрачной"
 
 #: ../panel/panel-dialogs.c:1434 ../panel/panel-dialogs.c:1472
 #: ../panel/panel-dialogs.c:1497
@@ -293,11 +292,11 @@ msgstr "Менеджер панелей"
 
 #: ../plugins/actions/actions.c:399
 msgid "Panel Actions"
-msgstr ""
+msgstr "Действия"
 
 #: ../plugins/actions/actions.c:416
 msgid "Select action type:"
-msgstr ""
+msgstr "Выберите тип действия"
 
 #: ../plugins/actions/actions.c:425
 msgid "Lock screen"
@@ -305,7 +304,7 @@ msgstr "Заблокировать экран"
 
 #: ../plugins/actions/actions.c:426
 msgid "Quit + Lock screen"
-msgstr ""
+msgstr "Выйти + Заблокировать экран"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -338,7 +337,7 @@ msgstr "ЖК"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:407
 msgid "Show _frame"
-msgstr ""
+msgstr "Показывать рамку"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
@@ -346,7 +345,7 @@ msgstr "Настройки часов"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Использовать 24-часовые часы"
 
 #: ../plugins/clock/clock.c:479
 msgid "Show AM/PM"
@@ -359,11 +358,11 @@ msgstr "Показывать секунды"
 #: ../plugins/iconbox/iconbox.c:802
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 msgid "Icon Box"
-msgstr ""
+msgstr "Переключатель окон"
 
 #: ../plugins/iconbox/iconbox.c:816
 msgid "Only show minimized applications"
-msgstr ""
+msgstr "Показывать только свернутые окна"
 
 #: ../plugins/launcher/launcher.c:410 ../plugins/launcher/launcher.c:472
 #, c-format
@@ -382,7 +381,7 @@ msgstr "Новый элемент"
 
 #: ../plugins/launcher/launcher.c:740 ../plugins/launcher/launcher.c:1272
 msgid "This item has not yet been configured"
-msgstr "Этот элемент не имеет настроек"
+msgstr "Этот элемент еще не настроен"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
@@ -437,13 +436,12 @@ msgid "Terminal"
 msgstr "Терминал"
 
 #: ../plugins/launcher/launcher-dialog.c:400
-#, fuzzy
 msgid "Select image file"
-msgstr "Выбор файла"
+msgstr "Выберите файл изображения"
 
 #: ../plugins/launcher/launcher-dialog.c:446
 msgid "Select command"
-msgstr "Выбор программы"
+msgstr "Выберите команду"
 
 #: ../plugins/launcher/launcher-dialog.c:469
 msgid "Name"
@@ -455,7 +453,7 @@ msgstr "Описание"
 
 #: ../plugins/launcher/launcher-dialog.c:542
 msgid "Other..."
-msgstr ""
+msgstr "Другое..."
 
 #: ../plugins/launcher/launcher-dialog.c:628
 msgid "Command"
@@ -466,7 +464,6 @@ msgid "Run in _terminal"
 msgstr "Выполнять в окне терминала"
 
 #: ../plugins/launcher/launcher-dialog.c:682
-#, fuzzy
 msgid "Use _startup notification"
 msgstr "Использовать уведомление о запуске"
 
@@ -475,6 +472,8 @@ msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Первый элемент списка будет отображен на панели. Остальные элементы будут "
+"доступны через меню."
 
 #: ../plugins/launcher/launcher-dialog.c:1321
 msgid "Program Launcher"
@@ -502,7 +501,7 @@ msgstr "Выбор файла"
 
 #: ../plugins/pager/pager.c:301 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr ""
+msgstr "Переключатель рабочих мест"
 
 #: ../plugins/pager/pager.c:321
 msgid "Number of rows:"
@@ -514,18 +513,16 @@ msgstr "Число колонок:"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Разделитель"
+msgstr "Разделитель или промежуток"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Разделитель"
+msgstr "Показывать разделитель"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr ""
+msgstr "Расширять"
 
 #: ../plugins/showdesktop/showdesktop.c:32
 msgid "Restore hidden windows"
@@ -537,22 +534,22 @@ msgstr "Скрыть окна и показать рабочий стол"
 
 #: ../plugins/systray/systray.c:69 ../plugins/systray/systray.c:84
 msgid "There is already a system tray running on this screen"
-msgstr ""
+msgstr "Системный лоток уже запущен на этом экране"
 
 #: ../plugins/systray/systray.c:90
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr ""
+msgstr "Невозможео зарегистрировать системный лоток: %s"
 
 #: ../plugins/systray/systray.c:394
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Системный лоток"
 
 #: ../plugins/tasklist/tasklist.c:401 ../plugins/tasklist/tasklist.c:454
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
 msgid "Task List"
-msgstr ""
+msgstr "Список задач"
 
 #: ../plugins/tasklist/tasklist.c:418
 msgid "Size"
@@ -564,27 +561,27 @@ msgstr "Минимальная ширина:"
 
 #: ../plugins/tasklist/tasklist.c:441
 msgid "Use all available space"
-msgstr ""
+msgstr "Использовать все доступное простанство"
 
 #: ../plugins/tasklist/tasklist.c:458
 msgid "Show tasks from _all workspaces"
-msgstr ""
+msgstr "Показывать задачи, запущенные на всех рабочих местах"
 
 #: ../plugins/tasklist/tasklist.c:468
 msgid "Show application _names"
-msgstr ""
+msgstr "Показывать названия приложений"
 
 #: ../plugins/tasklist/tasklist.c:482
 msgid "Never group tasks"
-msgstr ""
+msgstr "Никогда не группировать задачи"
 
 #: ../plugins/tasklist/tasklist.c:485
 msgid "Automatically group tasks"
-msgstr ""
+msgstr "Автоматически группировать задачи"
 
 #: ../plugins/tasklist/tasklist.c:488
 msgid "Always group tasks"
-msgstr ""
+msgstr "Всегда группировать задачи"
 
 #: ../plugins/windowlist/windowlist.c:309
 #, c-format
@@ -613,7 +610,7 @@ msgstr "Список окон"
 
 #: ../plugins/windowlist/windowlist.c:566
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "Включать все рабочие места"
 
 #: ../plugins/windowlist/windowlist.c:571
 msgid "Show Window Icons"
@@ -621,19 +618,19 @@ msgstr "Показывать значки окон"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Системные действия"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
-msgstr "Выйти или заблокировать экран"
+msgstr "Завершение сеанса или блокировка экрана"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Который час?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr ""
+msgstr "Отображает значки всех запущеных приложений"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -641,15 +638,15 @@ msgstr "Запуск"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Запуск программ с дополнительным меню"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Миниатюрное представление всех рабочих мест"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Добавляет промежуток или разделитель между элементами панели"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
@@ -661,20 +658,20 @@ msgstr "Показать/скрыть рабочий стол"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr ""
+msgstr "Отображает значки уведомления"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr ""
+msgstr "Отображает все запущеные приложения"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Отображает список окон"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
-msgstr ""
+msgstr "Тестовый модуль"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Этот модуль ни для чего не предназначен"
