--- a/po/vi.po
+++ b/po/vi.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-27 23:23+0900\n"
-"PO-Revision-Date: 2006-02-11 21:31+0300\n"
-"Last-Translator: Phan Vĩnh Thịnh <teppi@vnlinux.org>\n"
+"PO-Revision-Date: 2006-03-30 02:42+0300\n"
+"Last-Translator: Phan Vinh Thinh <teppi@vnlinux.org>\n"
 "Language-Team: Vietnamese <none@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -179,7 +179,6 @@ msgstr ""
 "panel ngược lại danh sách để gỡ bỏ chúng."
 
 #: ../panel/panel-dialogs.c:630
-#, fuzzy
 msgid "Available Items"
 msgstr "Các mục có"
 
@@ -259,16 +258,15 @@ msgstr "Diện mạo"
 #. size
 #: ../panel/panel-dialogs.c:1346
 msgid "Size (pixels):"
-msgstr ""
+msgstr "Kích thước (điểm):"
 
 #: ../panel/panel-dialogs.c:1369
-#, fuzzy
 msgid "Transparency (%):"
-msgstr "Trong suốt"
+msgstr "Trong suốt (%s):"
 
 #: ../panel/panel-dialogs.c:1393
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "Làm cho thanh hiện thời mờ đục"
 
 #: ../panel/panel-dialogs.c:1434 ../panel/panel-dialogs.c:1472
 #: ../panel/panel-dialogs.c:1497
@@ -370,7 +368,7 @@ msgstr "Không thể chạy \"%s\""
 #: ../plugins/launcher/launcher.c:435
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "Lỗi trong câu lệnh \"%s\""
 
 #: ../plugins/launcher/launcher.c:682 ../plugins/launcher/launcher.c:1271
 #: ../plugins/launcher/launcher-dialog.c:1142
@@ -483,6 +481,9 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"Giao diện đồ họa của Cài đặt Zero đã kết thúc, nhưng hộp thoại trình chạy "
+"biến mất trong lúc đó. Không thêm trình chạy (nhưng không làm mất các tập "
+"tin đã tải xuống)."
 
 #: ../plugins/launcher/launcher-dialog.c:1463
 #, c-format
@@ -492,6 +493,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Lỗi chạy 0launch:\n"
+"%s\n"
+"\n"
+"Xem hướng dẫn sử dụng Cài đặt Zero trên http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1786
 msgid "Select file"
@@ -511,9 +516,8 @@ msgstr "Số cột:"
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "Dấu cách"
+msgstr "Dấu cách hoặc khoảng trống"
 
 #: ../plugins/separator/separator.c:284
 msgid "_Draw Separator"
@@ -543,7 +547,7 @@ msgstr "Không thể đăng kí khay hệ thống: %s"
 #: ../plugins/systray/systray.c:394
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Khay hệ thống"
 
 #: ../plugins/tasklist/tasklist.c:401 ../plugins/tasklist/tasklist.c:454
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
@@ -583,9 +587,9 @@ msgid "Always group tasks"
 msgstr "Luôn luôn nhóm các tác vụ"
 
 #: ../plugins/windowlist/windowlist.c:309
-#, fuzzy, c-format
+#, c-format
 msgid "Workspace %d"
-msgstr "Thêm không gian"
+msgstr "Không gian %d"
 
 #: ../plugins/windowlist/windowlist.c:387
 #: ../plugins/windowlist/windowlist.c:393
@@ -593,14 +597,14 @@ msgid "Add workspace"
 msgstr "Thêm không gian"
 
 #: ../plugins/windowlist/windowlist.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace %d"
-msgstr "Gỡ bỏ thanh panel \"%d\"?"
+msgstr "Xóa không gian %d"
 
 #: ../plugins/windowlist/windowlist.c:410
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr ""
+msgstr "Xóa không gian '%s'"
 
 #: ../plugins/windowlist/windowlist.c:555
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
@@ -613,7 +617,7 @@ msgstr "Trên mọi không gian"
 
 #: ../plugins/windowlist/windowlist.c:571
 msgid "Show Window Icons"
-msgstr ""
+msgstr "Hiện biểu tượng cửa sổ"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
