--- a/po/el.po
+++ b/po/el.po
@@ -6,9 +6,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
+"Project-Id-Version: xfce4-panel 4.3.30\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-03-27 23:23+0900\n"
+"POT-Creation-Date: 2006-04-09 11:13+0900\n"
 "PO-Revision-Date: 2006-03-30 14:31+0300\n"
 "Last-Translator: Stathis Kamperis <ekamperi@auth.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
@@ -36,7 +36,8 @@ msgid "Xfce Panel"
 msgstr "Ταμπλώ του Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid "The item will be removed from the panel and its configuration will be lost."
+msgid ""
+"The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Αυτό το αντικείμενο θα αφαιρεθεί από το ταμπλό και οι ρυθμίσεις του θα "
 "χαθούν."
@@ -477,14 +478,8 @@ msgstr ""
 msgid "Program Launcher"
 msgstr "Εκκινητής προγράμματος"
 
-#: ../plugins/launcher/launcher-dialog.c:1428
-msgid ""
-"The Zero Install GUI has finished, but the launcher dialog has disappeared "
-"in the meantime. Not adding launcher (but any files downloaded have not been "
-"lost)."
-msgstr ""
-
-#: ../plugins/launcher/launcher-dialog.c:1463
+#: ../plugins/launcher/launcher-dialog.c:1403
+#: ../plugins/launcher/launcher-dialog.c:1504
 #, c-format
 msgid ""
 "Failed to run 0launch:\n"
@@ -493,7 +488,14 @@ msgid ""
 "For help using Zero Install, see http://0install.net"
 msgstr ""
 
-#: ../plugins/launcher/launcher-dialog.c:1786
+#: ../plugins/launcher/launcher-dialog.c:1469
+msgid ""
+"The Zero Install GUI has finished, but the launcher dialog has disappeared "
+"in the meantime. Not adding launcher (but any files downloaded have not been "
+"lost)."
+msgstr ""
+
+#: ../plugins/launcher/launcher-dialog.c:1827
 msgid "Select file"
 msgstr "Επιλογή αρχείου"
 
@@ -673,4 +675,3 @@ msgstr "Δοκιμαστικό αρθρωμα"
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
 msgstr "Αυτό το άρθρωμα δεν έχει νόημα"
-
