Updated Hungarian translations by Szervac Attila <sas@321.hu>.
(Old svn revision: 20847)

--- a/po/hu.po
+++ b/po/hu.po
@@ -7,11 +7,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.2.3\n"
+"Project-Id-Version: xfce4-panel 4.2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-07 12:32+0100\n"
-"PO-Revision-Date: 2005-10-08 08:10+0100\n"
-"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-04-10 23:09+0100\n"
+"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -295,7 +295,7 @@ msgstr "Mindig felül:"
 
 #: settings/xfce_settings_dialog.c:397
 msgid "Autohide:"
-msgstr "Automatikus _rejtés:"
+msgstr "Automatikus rejtés:"
 
 #: settings/xfce_settings_dialog.c:467
 msgid "Xfce Panel Settings"
@@ -453,6 +453,5 @@ msgid "Interval (sec):"
 msgstr "Gyakoriság (másodperc):"
 
 #: plugins/mailcheck/mailcheck.c:1016
-#, fuzzy
 msgid "Mail checker"
-msgstr "Új levelek keresése"
+msgstr "Levél kereső"
