Updated Estonian translations by Peeter Vois <peeter.vois@proekspert.ee>.
(Old svn revision: 21048)

--- a/po/et.po
+++ b/po/et.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 22:03+0900\n"
-"PO-Revision-Date: 2006-02-28 15:32+0200\n"
+"PO-Revision-Date: 2006-04-13 14:16+0300\n"
 "Last-Translator: Mart Tõnso <mart.tonso@ttu.ee>\n"
 "Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -367,7 +367,7 @@ msgstr "Ei suutnud käivitada \"%s\"."
 #: ../plugins/launcher/launcher.c:435
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "Käsus \"%s\" on viga"
 
 #: ../plugins/launcher/launcher.c:682 ../plugins/launcher/launcher.c:1271
 #: ../plugins/launcher/launcher-dialog.c:1142
@@ -482,6 +482,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"0-stardi käivitamine ebaõnnestus:\n"
+"%s\n"
+"\n"
+"Rohkem infot leiate http://0intall.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1469
 msgid ""
@@ -489,6 +493,8 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"0 installi GUI lõpetas, kuid startija dialoog kadus vahepeal ära. Startijat "
+"ei lisata(kõik allalaetud failid on alles)."
 
 #: ../plugins/launcher/launcher-dialog.c:1827
 msgid "Select file"
