--- a/po/el.po
+++ b/po/el.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-04-17 22:03+0900\n"
-"PO-Revision-Date: 2006-03-30 14:31+0300\n"
-"Last-Translator: Stathis Kamperis <ekamperi@auth.gr>\n"
+"POT-Creation-Date: 2006-04-17 20:06+0300\n"
+"PO-Revision-Date: 2006-04-17 20:10+0200\n"
+"Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -487,6 +487,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Η εκτέλεση του 0launch απέτυχε:\n"
+"%s\n"
+"\n"
+"Για βοήθεια σχετικά με το Zero Install, στο http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1469
 msgid ""
@@ -494,6 +498,9 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"Η διεπαφή Zero Install ολοκληρώθηκε, αλλά ο διάλογος του εκκινητή "
+"εξαφανίστηκε στο μεταξύ. Δεν προστέθηκε εκκινητής (αλλά δεν χάθηκαν τα τυχόν "
+"ληφθέντα αρχεία)."
 
 #: ../plugins/launcher/launcher-dialog.c:1827
 msgid "Select file"
