--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,8 +1,10 @@
-# ----zh_CN.po (xfce4-panel 4.3.90.1)  ----Simplified Chinese translations for xfce-mcs-plugins package.
+# ----zh_CN.po (xfce4-panel 4.3.90.1)  ----
+# Simplified Chinese translations for xfce-mcs-plugins package.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Yongtao Yang <yongtao.yang@telia.com>, 2004.
 # Huang Huan <unicon221@gmail.com>, 2006.
+# Jick Nan <jick.nan@gmail.com>, 2006.
 # 
 # 
 msgid ""
@@ -10,8 +12,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 22:03+0900\n"
-"PO-Revision-Date: 2006-02-16 23:04+0800\n"
-"Last-Translator: Huang Huan <unicon221@gmail.com>\n"
+"PO-Revision-Date: 2006-04-20 21:45+0800\n"
+"Last-Translator: Jick Nan <jick.nan@gmail.com>\n"
 "Language-Team: Chinese/Simplified <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -191,7 +193,7 @@ msgstr "全屏宽度"
 #: ../panel/panel-dialogs.c:802 ../panel/panel-dialogs.c:1026
 #, fuzzy
 msgid "Span Monitors"
-msgstr "监视器"
+msgstr "跨显示器"
 
 #: ../panel/panel-dialogs.c:862 ../panel/panel-dialogs.c:1091
 msgid "Left"
@@ -257,16 +259,15 @@ msgstr "外观"
 #. size
 #: ../panel/panel-dialogs.c:1297
 msgid "Size (pixels):"
-msgstr ""
+msgstr "大小（象素）："
 
 #: ../panel/panel-dialogs.c:1320
-#, fuzzy
 msgid "Transparency (%):"
-msgstr "透明度"
+msgstr "透明度 (%)"
 
 #: ../panel/panel-dialogs.c:1344
 msgid "Make active panel opaque"
-msgstr ""
+msgstr "使活动面板不透明"
 
 #: ../panel/panel-dialogs.c:1383 ../panel/panel-dialogs.c:1419
 #: ../panel/panel-dialogs.c:1444
@@ -312,7 +313,7 @@ msgstr "退出 + 锁住屏幕"
 #.
 #: ../plugins/clock/clock.c:109
 msgid "%A %d %B %Y"
-msgstr ""
+msgstr "%Y 年 %B 月 %d 日  %A"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
@@ -368,7 +369,7 @@ msgstr "无法运行 \"%s\""
 #: ../plugins/launcher/launcher.c:435
 #, c-format
 msgid "Error in command \"%s\""
-msgstr ""
+msgstr "命令 \"%s\" 出错"
 
 #: ../plugins/launcher/launcher.c:682 ../plugins/launcher/launcher.c:1271
 #: ../plugins/launcher/launcher-dialog.c:1142
@@ -508,13 +509,12 @@ msgstr "列数："
 
 #: ../plugins/separator/separator.c:271
 #: ../plugins/separator/separator.desktop.in.in.h:2
-#, fuzzy
 msgid "Separator or Spacing"
-msgstr "隔离符"
+msgstr "分隔符或间隔"
 
 #: ../plugins/separator/separator.c:284
 msgid "_Draw Separator"
-msgstr "绘制(_D)隔离符"
+msgstr "绘制(_D)分隔符"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
@@ -580,9 +580,9 @@ msgid "Always group tasks"
 msgstr "总是分组任务"
 
 #: ../plugins/windowlist/windowlist.c:309
-#, fuzzy, c-format
+#, c-format
 msgid "Workspace %d"
-msgstr "添加工作区"
+msgstr "工作区 %d"
 
 #: ../plugins/windowlist/windowlist.c:387
 #: ../plugins/windowlist/windowlist.c:393
@@ -590,14 +590,14 @@ msgid "Add workspace"
 msgstr "添加工作区"
 
 #: ../plugins/windowlist/windowlist.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "Remove Workspace %d"
-msgstr "移除面板\"%d\"？"
+msgstr "移除工作区 %d"
 
 #: ../plugins/windowlist/windowlist.c:410
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr ""
+msgstr "移除工作区 '%s'"
 
 #: ../plugins/windowlist/windowlist.c:555
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
@@ -610,7 +610,7 @@ msgstr "包含所有工作区"
 
 #: ../plugins/windowlist/windowlist.c:571
 msgid "Show Window Icons"
-msgstr ""
+msgstr "显示窗口图标"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
