[l10n:eu] Basque translation update
(Old svn revision: 21196)

--- a/po/eu.po
+++ b/po/eu.po
@@ -491,6 +491,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"Huts 0launch abiaraztean:\n"
+"%s\n"
+"\n"
+"Zero Instalatzaileari buruzko argibideentzat begiratu http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1469
 msgid ""
@@ -498,6 +502,9 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
+"Zero Instalatzaile Interfazea amaitu da, baina abiarazte elkarrizket desagertu "
+"egin da bitartean. Ez da abiarazlea gehituko (baina deskargaturiko edozein "
+"fitxategi ez da galdu)." 
 
 #: ../plugins/launcher/launcher-dialog.c:1827
 msgid "Select file"
@@ -590,12 +597,12 @@ msgstr "Beti _taldekatu lanak"
 #: ../plugins/windowlist/windowlist.c:226
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "Ziur al zaude %d idazmahaia ezabatu nahi duzula?"
 
 #: ../plugins/windowlist/windowlist.c:227
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "Ziur al zaude '%s' idazmahaia ezabatu nahi duzula?"
 
 #: ../plugins/windowlist/windowlist.c:428
 #, c-format
@@ -629,53 +636,49 @@ msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
 msgstr ""
+"<i>Larrialdiko berri-emateak</i> botoia keinuka ipiniko du aplikazioa batek "
+"zure arreta behar duenean."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:160
-#, fuzzy
 msgid "Urgency Notification"
-msgstr "Erabili _hasiera notifikazioak"
+msgstr "Larrialdiko Berri-ematea"
 
 #: ../plugins/windowlist/windowlist-dialog.c:167
 msgid "_Disabled"
-msgstr ""
+msgstr "_Ezgaiturik"
 
 #: ../plugins/windowlist/windowlist-dialog.c:176
 msgid "For _other workspaces"
-msgstr ""
+msgstr "Beste _idazmahaientzat"
 
 #: ../plugins/windowlist/windowlist-dialog.c:185
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "Bistarazi idazmahi birtual guztien lanak"
+msgstr "Idazmahi _guztiontzat"
 
 #: ../plugins/windowlist/windowlist-dialog.c:199
-#, fuzzy
 msgid "_Icon button"
-msgstr "Ekintza Botoiak"
+msgstr "_Ikono Botoia"
 
 #: ../plugins/windowlist/windowlist-dialog.c:206
 msgid "A_rrow button"
-msgstr ""
+msgstr "Ge_zi botoia"
 
 #: ../plugins/windowlist/windowlist-dialog.c:224
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "Bistarazi idazmahi birtual guztien lanak"
+msgstr "Bistarazi idazmahi birtual guztietako leihoak"
 
 #: ../plugins/windowlist/windowlist-dialog.c:233
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "Bistarazi aplikazio _izenak"
+msgstr "Bistarazi aplikazio _ikonoak"
 
 #: ../plugins/windowlist/windowlist-dialog.c:242
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "Idazmahai e_kintzak bistarazi"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "%d Panela"
+msgstr "Panela"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -738,17 +741,15 @@ msgid "This plugin has no purpose"
 msgstr "Plugin honek ez du zereginik"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "Panel Kudeatzailea:"
+msgstr "Xfce 4 Panel Kudeatzailea:"
 
-#, fuzzy
 #~ msgid "Customize panel"
-#~ msgstr "Panela Pertsonalizatu"
+#~ msgstr "Panela pertsonalizatu"
 
 #, fuzzy
 #~ msgid "Customize panel settings"
-#~ msgstr "Panela Pertsonalizatu"
+#~ msgstr "Panela ezarpenak pertsonalizatu"
 
 #~ msgid "Include all Workspaces"
 #~ msgstr "Idazmahai guztiak barne"
